toolbar style, fix bug with invisible menu items when menu is long

--- a/styles/toolbar.css
+++ b/styles/toolbar.css
@@ -10,33 +10,34 @@ BODY>HEADER,
 FOOTER {
 	position:fixed;
 	top:0;
-	right:50px;
-	left:50px;
-	padding:0 49px;
-	background:#A7A7A7;
+	right:5%;
+	left:5%;
+	background:#AAA;
 	background:linear-gradient(#CCC 0%, #AAA 100%) 0 0;
-	box-shadow:0 3px 4px #666;
+	box-shadow:0 2px 3px #666;
 	text-shadow:0 1px 0 #DDD;
 	}
 FOOTER {
 	top:auto;
 	bottom:0;
-	box-shadow:0 -3px 4px #666;
+	box-shadow:0 -2px 3px #666;
+	padding:0 49px;
 	}
 A {
 	color:#000;
 	}
-A:hover {
+A:hover,
+NAV A:last-child {
 	text-decoration:none;
 	}
 H1 {
 	float:left;
-	margin:15px 0;
+	margin:15px 49px;
 	font-size:24px;
 	}
 NAV {
 	float:right;
-	padding-left:120px;
+	padding:0 49px 0 185px;
 	}
 NAV H2 {
 	margin:18px 0;
@@ -51,13 +52,15 @@ NAV UL {
 	position:absolute;
 	top:56px;
 	right:0;
+	height:500%;
 	display:none;
 	margin:0;
 	padding:0;
 	background:#AAA;
-	box-shadow:0 5px 4px #666;
+	box-shadow:0 4px 3px #666;
 	list-style:none;
 	text-align:left;
+	overflow-y:scroll;
 	}
 NAV:hover UL {
 	display:block;
@@ -71,18 +74,15 @@ NAV A:first-child {
 	float:left;
 	margin:0 50px 0 0;
 	}
-NAV A:last-child {
-	text-decoration:none;
-	}
 NAV A:last-child:before {
 	content:"by ";
 	}
 ARTICLE {
-	padding:50px 99px;
+	padding:5% 9%;
 	}
 ARTICLE HEADER,
 SECTION {
 	display:block;
-	margin:50px 0;
+	margin:5% 0;
 	}
 
